--- a/stylesTW.css
+++ b/stylesTW.css
@@ -8,6 +8,11 @@ a {
 	text-decoration: none;
 }
 
+img {
+	width: 100%;
+	height: auto;
+}
+
 .header {
     font-family: "nimbus-sans", sans-serif;
     font-weight: 800;
@@ -132,7 +137,6 @@ a {
 	font-family: "leitura-news", serif;
 	padding-top: 60px;
 	padding-bottom: 150px;
-    margin-left: 140px;
     word-spacing: .05em;
     font-size: 20px;
 }
@@ -371,4 +375,93 @@ a {
 	margin-left: 30px;
 	width: 12px;
 	height: 12px;
+}
+
+/*For Mobile:*/
+@media all and (max-width:600px) {
+	.header {
+		border-bottom: 0.063rem solid rgba(0, 0, 0, 0.2);
+	}
+	.home__button {
+		padding: 5px;
+		width: 60px;
+		height: 60px;
+	}
+	.navigation {
+		margin-right: 0px;
+		font-size: 12px;
+	}
+	.main {
+		display: block;
+		margin-left: 30px;
+		margin-right: 30px;
+		padding: 0px;
+		font-size: 23px;
+	}
+	.topLinks {
+		padding-bottom: 40px;
+	}
+	.topLinks__item {
+		font-size: 17px;
+	}
+	.project {
+		flex-flow: column wrap;
+		align-items: center;
+		padding: 0;
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+	.project__description {
+		font-size: 18px;
+		padding-bottom: 20px;
+	}
+	.project__image {
+		max-width: 350px;
+		max-height: 308.5px;
+	}
+	.bottomLinks {
+		font-size: 18px;
+		margin-left: 50px;
+		padding-top: 20px;
+		padding-bottom: 80px;
+	}
+	.footer {
+		flex-flow: column wrap;
+		font-size: 12px;
+	}
+	.footer__item {
+		flex-flow: column wrap;
+		font-size: 12px;
+	}
+	.footer__itemRight {
+		flex-flow: column wrap;
+		padding-top: 5px;
+	}
+	.footer__itemImageRight {
+		display: flex;
+		flex-flow: column wrap;
+		margin-left: 0;
+		padding-top: 5px;
+	}
+}
+
+
+
+/*For Tablet:*/
+@media all and (max-width:800px) {
+	.project {
+		justify-content: space-between;
+		margin-left: 50px;
+		margin-right: 50px;
+	}
+	.project__image {
+		margin: 1em;
+		max-width: 250px;
+		max-height: 208.5px;
+	}
+	.bottomLinks {
+		margin-left: 50px;
+		padding-top: 20px;
+		padding-bottom: 80px;
+	}
 }
