--- a/stylesTW.css
+++ b/stylesTW.css
@@ -430,16 +430,14 @@ img {
 		font-size: 12px;
 	}
 	.footer__item {
-		flex-flow: column wrap;
 		font-size: 12px;
 	}
-	.footer__itemRight {
+/*	.footer__itemRight {
 		flex-flow: column wrap;
 		padding-top: 5px;
-	}
+	}*/
 	.footer__itemImageRight {
 		display: flex;
-		flex-flow: column wrap;
 		margin-left: 0;
 		padding-top: 5px;
 	}
