--- a/stylesTW.css
+++ b/stylesTW.css
@@ -382,15 +382,18 @@ img {
 	.header {
 		border-bottom: 0.063rem solid rgba(0, 0, 0, 0.2);
 	}
+
 	.home__button {
 		padding: 5px;
 		width: 60px;
 		height: 60px;
 	}
+
 	.navigation {
 		margin-right: 0px;
 		font-size: 12px;
 	}
+
 	.main {
 		display: block;
 		margin-left: 30px;
@@ -398,12 +401,15 @@ img {
 		padding: 0px;
 		font-size: 23px;
 	}
+
 	.topLinks {
 		padding-bottom: 40px;
 	}
+
 	.topLinks__item {
 		font-size: 17px;
 	}
+
 	.project {
 		flex-flow: column wrap;
 		align-items: center;
@@ -411,33 +417,74 @@ img {
 		margin-left: 30px;
 		margin-right: 30px;
 	}
-	.project__description {
-		font-size: 18px;
-		padding-bottom: 20px;
-	}
+
 	.project__image {
 		max-width: 350px;
 		max-height: 308.5px;
 	}
+
+	.project__description {
+		font-size: 18px;
+		padding-bottom: 20px;
+	}
+
 	.bottomLinks {
 		font-size: 18px;
 		margin-left: 50px;
 		padding-top: 20px;
 		padding-bottom: 80px;
 	}
+
+	.article__containter {
+		display: flex;
+		align-items: center;
+		padding: 0;
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+
+	.article-block__title {
+		margin-left: 0px;
+	}
+
+	.article-block__image {
+		margin-left: 25px;
+	}
+
+	.title {
+		font-size: 27px;
+	}
+
+	.post-info {
+		font-size: 17px;
+		padding-top: 5px;
+		margin-left: 0px;
+	}
+
+	.content {
+		font-size: 18px;
+		padding-bottom: 20px;
+		margin-left: 20px;
+		margin-right: 20px;
+	}
+
 	.footer {
-		flex-flow: column wrap;
+		flex-flow : column wrap;
 		font-size: 12px;
 	}
+
 	.footer__item {
 		font-size: 12px;
 	}
-/*	.footer__itemRight {
-		flex-flow: column wrap;
-		padding-top: 5px;
-	}*/
-	.footer__itemImageRight {
+
+	.footer__itemRight {
+		/*flex-flow: column wrap;*/
 		display: flex;
+		padding-top: 5px;
+	}
+
+	.footer__itemImageRight {
+		/*display: flex;*/
 		margin-left: 0;
 		padding-top: 5px;
 	}
